--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+  background-color: #e6e6e6;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
